Completed Week 4 Java Developer 2 tasks